<resources>
    <string name="app_name">Hanashi</string>
    <string name="error_insecure_password">Password is too short. Please enter at least 8 characters.</string>
    <string name="error_invalid_email">The email address you entered is not valid. Please try again.</string>
    <string name="have_account">Already have an account?</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="help_add_story">add story</string>
    <string name="help_email">Email</string>
    <string name="help_name">Name</string>
    <string name="help_password">Password</string>
    <string name="login">Login</string>
    <string name="login_subheadline">Let\'s dive into captivating stories personalized for You</string>
    <string name="no_account">Don\'t have accout?</string>
    <string name="register">Register</string>
    <string name="register_headline">Let\'s Begin</string>
    <string name="register_subheadline">First let\'s get know and then make your account here.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="register_success">Welcome to the club!, Let\'s Login to continue</string>
    <string name="register_failed">Ups, look like we had a problem, let\'s try again</string>
    <string name="empty_field">Hmmm… you forgot this, aren\'t you?</string>
    <string name="_success">Yay, welcome to the club!!!</string>
    <string name="login_failed">Ouch, this is strange let\'s try again</string>
    <string name="login_success">Yay, Welcome to the club!!!</string>
    <string name="desc_image_of_the_story">Image of the story</string>
    <string name="text_seconds_ago">second ago</string>
    <string name="text_minutes_ago">minute ago</string>
    <string name="text_hours_ago">hour ago</string>
    <string name="text_days_ago">days ago</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add_story">Add Story</string>
    <string name="menu_home">home</string>
    <string name="menu_blank">not a menu</string>
    <string name="menu_exit">exit</string>
    <string name="menu_refresh">refresh</string>
    <string name="help_open_menu">open menu</string>
    <string name="text_back">back</string>
    <string name="error_offline">Look like you are offline?</string>
    <string name="no_item">Nothing to show, tehe!</string>
    <string name="description">What do you think?</string>
    <string name="post">Post</string>
    <string name="image_preview">image preview</string>
    <string name="pick_from_gallery">pick from gallery</string>
    <string name="take_from_camera">take from camera</string>
    <string name="nothing_here">Nothing here!</string>
    <string name="no_permissions">Failed to get permissions</string>
    <string name="take_image">Select an image</string>
    <string name="no_image">Did you forgot to add the image?</string>
    <string name="posted">Yay!! your story is posted</string>
    <string name="post_failed">Ouch, we can\'t post it</string>
    <string name="image_loading">We still cooking you image</string>
    <string name="change_language">Change language</string>
    <string name="logout">logout</string>
    <string name="reason">" reason: "</string>
    <string name="see_you_later">See you later</string>
    <string name="menu_maps">maps</string>
    <string name="retry">try again</string>
    <string name="pick_location">pick a location</string>
    <string name="unknown_location">unknown location, try go outside</string>
    <string name="location_format" translatable="false">Lat: %1$.6f, Long: %2$.6f</string>
    <string-array name="tod">
        <item>Good Morning</item>
        <item>Good Afternoon</item>
        <item>Good Evening</item>
        <item>Good Night</item>
    </string-array>
</resources>