<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    android:fitsSystemWindows="true"
    tools:context=".ui.register.RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/welcome_back"
        android:src="@mipmap/ic_launcher_foreground"
        android:transitionName="logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_headline"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold"
        android:transitionName="headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/sub_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/register_subheadline"
        android:textAlignment="center"
        android:transitionName="subHeadline"
        app:layout_constraintTop_toBottomOf="@+id/headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sub_headline"
        tools:layout_editor_absoluteX="16dp">

        <com.andka.hanashi.widget.BaseEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/rounded_background"
            android:drawableStart="@drawable/ic_user_white_24dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/primary"
            android:hint="@string/help_name"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="24dp"
            android:textSize="14sp" />

        <com.andka.hanashi.widget.EmailEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:drawableStart="@drawable/ic_envelope_white_24dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/primary"
            android:hint="@string/help_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="24dp"
            android:textSize="14sp"
            android:transitionName="email" />

        <com.andka.hanashi.widget.PasswordEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/primary"
            android:hint="@string/help_password"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:textSize="14sp"
            android:transitionName="password" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Button.primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/register"
            android:transitionName="btnMain"
            android:useDefaultMargins="true"
            app:layout_constraintBottom_toTopOf="@+id/no_account" />

        <LinearLayout
            android:id="@+id/have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:transitionName="misc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/label_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:minWidth="0dp"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/primary"
                android:textStyle="bold"
                app:iconPadding="0dp" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/loading_components"
        layout="@layout/loading_components"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
