<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/welcome_description"
            android:src="@drawable/img_undraw_profile_data"
            app:layout_constraintBottom_toTopOf="@id/mainLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/register_headline"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:maxWidth="300dp"
                android:text="@string/register_subheadline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="16dp">

                <com.andka.penpal.ui.customview.CleanableEditText
                    android:id="@+id/ed_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/rounded_background"
                    android:drawableStart="@drawable/ic_user_white_24dp"
                    android:drawablePadding="12dp"
                    android:drawableTint="@color/primary"
                    android:hint="@string/help_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="24dp"
                    android:textSize="14sp" />

                <com.andka.penpal.ui.customview.MatchPatternEditText
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_envelope_white_24dp"
                    android:drawablePadding="12dp"
                    android:drawableTint="@color/primary"
                    android:hint="@string/help_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="24dp"
                    android:textSize="14sp" />

                <com.andka.penpal.ui.customview.MatchPatternEditText
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_lock_white_24dp"
                    android:drawablePadding="12dp"
                    android:drawableTint="@color/primary"
                    android:hint="@string/help_password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="24dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                style="@style/Button.primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/login"
                android:useDefaultMargins="true"
                app:layout_constraintBottom_toTopOf="@+id/no_account" />

            <LinearLayout
                android:id="@+id/have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/label_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@color/transparent"
                    android:minWidth="0dp"
                    android:padding="8dp"
                    android:text="@string/login"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    app:iconPadding="0dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
